# citybikeshare

./: .env.config  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Pipfile  README.md  TODO_coordinates_count.md  config.template.py  createDb.py  definitions.py  main.py  notes.md  pyproject.toml  sync.py  system_metadata.csv
analysis/: all_cities_yearly_trips.json  duration_buckets_all_cities.json  latest_trips.json  summary_all_cities.json  trip_counts_by_system_year.json  trips_per_year.json
analysis/austin/: duration_buckets.json  station_trip_counts.json  summary.json  visuals.json
analysis/bergen/: duration_buckets.json  station_coords_canonical.json  station_trip_counts.json  summary.json  visuals.json
analysis/boston/: duration_buckets.json  station_coords_canonical.json  station_trip_counts.json  summary.json  visuals.json
doc/: TODO_coordinates_count.md  supported_cities.md
output/: logged.json  system_statistics.json
scripts/: constants.py  generate_cities_table.py  inventory_raw_columns.py  logger.py  main.py  main_test.py  migrate_raw_to_gzip.py  sync_and_build_city.py  sync_city.py  utils.py  utils_bicycle_transit_systems.py  utils_dolt.py  utils_playwright.py
scripts/city/: oslo.py  (+18 more)
test_data/: 202301-bluebikes-tripdata.csv  202401-bluebikes-tripdata.csv
tests/: montreal_station_file_samples.py  test_clean_gzip.py  test_extract.py  test_handle_odd_hour_duration.py  test_normalize_birth_year.py  test_remove_invalid_rows.py  test_resolve_montreal_station_names.py  test_state.py  test_station_maps.py  test_taipei_download.py  test_transform.py
(+275 files in other folders)
