[tool.poetry]
name = "citybikeshare"
version = "0.2.0"
description = "ETL and data visualization tools for global bikeshare systems"
authors = ["Jeff King"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/commanderking/citybikeshare"
repository = "https://github.com/commanderking/citybikeshare"
keywords = ["bikeshare"]
packages = [{ include = "src/citybikeshare" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

# Core dependencies
polars = "^1.3.0"
typer = "^0.20.0"
playwright = "^1.45.0"
pyyaml = "^6.0.2"
pathlib = "^1.0.1"
requests = "^2.32.3"

# Data and I/O
pyarrow = "^21.0.0"
duckdb = "^1.1.0"

# Optional visualization / frontend
rich = "^14.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.14.2"
black = "^24.10.0"
mypy = "^1.11.2"
types-requests = "^2.32.0.20241016"

[tool.poetry.scripts]
sync = "src.citybikeshare.cli.sync:app"
extract = "src.citybikeshare.cli.extract:app"
transform = "src.citybikeshare.cli.transform:app"
transform_all = "src.citybikeshare.cli.transform_all:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
